[package]
name = "trainings_abc_d_e"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc212-d = { alias = "abc212_d", problem = "https://atcoder.jp/contests/abc212/tasks/abc212_d" }
abc213-d = { alias = "abc213_d", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_d" }
abc214-d = { alias = "abc214_d", problem = "https://atcoder.jp/contests/abc214/tasks/abc214_d" }
abc215-d = { alias = "abc215_d", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_d" }
abc216-d = { alias = "abc216_d", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_d" }
abc217-d = { alias = "abc217_d", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_d" }
abc218-d = { alias = "abc218_d", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_d" }
abc219-d = { alias = "abc219_d", problem = "https://atcoder.jp/contests/abc219/tasks/abc219_d" }
abc220-d = { alias = "abc220_d", problem = "https://atcoder.jp/contests/abc220/tasks/abc220_d" }
abc221-d = { alias = "abc221_d", problem = "https://atcoder.jp/contests/abc221/tasks/abc221_d" }
abc222-d = { alias = "abc222_d", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_d" }
abc223-d = { alias = "abc223_d", problem = "https://atcoder.jp/contests/abc223/tasks/abc223_d" }
abc224-d = { alias = "abc224_d", problem = "https://atcoder.jp/contests/abc224/tasks/abc224_d" }
abc225-d = { alias = "abc225_d", problem = "https://atcoder.jp/contests/abc225/tasks/abc225_d" }
abc226-d = { alias = "abc226_d", problem = "https://atcoder.jp/contests/abc226/tasks/abc226_d" }
abc227-d = { alias = "abc227_d", problem = "https://atcoder.jp/contests/abc227/tasks/abc227_d" }
abc228-d = { alias = "abc228_d", problem = "https://atcoder.jp/contests/abc228/tasks/abc228_d" }
abc229-d = { alias = "abc229_d", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_d" }
abc230-d = { alias = "abc230_d", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_d" }
abc231-d = { alias = "abc231_d", problem = "https://atcoder.jp/contests/abc231/tasks/abc231_d" }
abc232-d = { alias = "abc232_d", problem = "https://atcoder.jp/contests/abc232/tasks/abc232_d" }
abc233-d = { alias = "abc233_d", problem = "https://atcoder.jp/contests/abc233/tasks/abc233_d" }
abc234-d = { alias = "abc234_d", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_d" }
abc235-d = { alias = "abc235_d", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_d" }
abc236-d = { alias = "abc236_d", problem = "https://atcoder.jp/contests/abc236/tasks/abc236_d" }
abc237-d = { alias = "abc237_d", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_d" }
abc238-d = { alias = "abc238_d", problem = "https://atcoder.jp/contests/abc238/tasks/abc238_d" }
abc239-d = { alias = "abc239_d", problem = "https://atcoder.jp/contests/abc239/tasks/abc239_d" }
abc240-d = { alias = "abc240_d", problem = "https://atcoder.jp/contests/abc240/tasks/abc240_d" }
abc241-d = { alias = "abc241_d", problem = "https://atcoder.jp/contests/abc241/tasks/abc241_d" }
abc242-d = { alias = "abc242_d", problem = "https://atcoder.jp/contests/abc242/tasks/abc242_d" }
abc243-d = { alias = "abc243_d", problem = "https://atcoder.jp/contests/abc243/tasks/abc243_d" }
abc244-d = { alias = "abc244_d", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_d" }
abc245-d = { alias = "abc245_d", problem = "https://atcoder.jp/contests/abc245/tasks/abc245_d" }
abc246-d = { alias = "abc246_d", problem = "https://atcoder.jp/contests/abc246/tasks/abc246_d" }
abc247-d = { alias = "abc247_d", problem = "https://atcoder.jp/contests/abc247/tasks/abc247_d" }
abc257-d = { alias = "abc257_d", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_d" }
abc262-d = { alias = "abc262_d", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_d" }
abc268-d = { alias = "abc268_d", problem = "https://atcoder.jp/contests/abc268/tasks/abc268_d" }
abc270-d = { alias = "abc270_d", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_d" }
abc310-d = { alias = "abc310_d", problem = "https://atcoder.jp/contests/abc310/tasks/abc310_d" }
abc332-d = { alias = "abc332_d", problem = "https://atcoder.jp/contests/abc332/tasks/abc332_d" }
abc338-d = { alias = "abc338_d", problem = "https://atcoder.jp/contests/abc338/tasks/abc338_d" }
abc339-d = { alias = "abc339_d", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_d" }
abc359-d = { alias = "abc359_d", problem = "https://atcoder.jp/contests/abc359/tasks/abc359_d" }
abc361-d = { alias = "abc361_d", problem = "https://atcoder.jp/contests/abc361/tasks/abc361_d" }
abc226-e = { alias = "abc226_e", problem = "https://atcoder.jp/contests/abc226/tasks/abc226_e" }
abc235-e = { alias = "abc235_e", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_e" }
abc237-e = { alias = "abc237_e", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_e" }
abc247-e = { alias = "abc247_e", problem = "https://atcoder.jp/contests/abc247/tasks/abc247_e" }
abc254-e = { alias = "abc254_e", problem = "https://atcoder.jp/contests/abc254/tasks/abc254_e" }
abc256-e = { alias = "abc256_e", problem = "https://atcoder.jp/contests/abc256/tasks/abc256_e" }
abc248-e = { alias = "abc248_e", problem = "https://atcoder.jp/contests/abc248/tasks/abc248_e" }
abc252-e = { alias = "abc252_e", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_e" }
abc264-e = { alias = "abc264_e", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_e" }
abc266-e = { alias = "abc266_e", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_e" }
abc270-e = { alias = "abc270_e", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_e" }
abc275-e = { alias = "abc275_e", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_e" }
abc280-e = { alias = "abc280_e", problem = "https://atcoder.jp/contests/abc280/tasks/abc280_e" }
abc292-e = { alias = "abc292_e", problem = "https://atcoder.jp/contests/abc292/tasks/abc292_e" }
abc296-e = { alias = "abc296_e", problem = "https://atcoder.jp/contests/abc296/tasks/abc296_e" }
abc306-e = { alias = "abc306_e", problem = "https://atcoder.jp/contests/abc306/tasks/abc306_e" }
abc353-e = { alias = "abc353_e", problem = "https://atcoder.jp/contests/abc353/tasks/abc353_e" }
abc307-e = { alias = "abc307_e", problem = "https://atcoder.jp/contests/abc307/tasks/abc307_e" }
abc232-e = { alias = "abc232_e", problem = "https://atcoder.jp/contests/abc232/tasks/abc232_e" }
abc310-e = { alias = "abc310_e", problem = "https://atcoder.jp/contests/abc310/tasks/abc310_e" }
abc327-e = { alias = "abc327_e", problem = "https://atcoder.jp/contests/abc327/tasks/abc327_e" }
abc338-e = { alias = "abc338_e", problem = "https://atcoder.jp/contests/abc338/tasks/abc338_e" }
abc341-e = { alias = "abc341_e", problem = "https://atcoder.jp/contests/abc341/tasks/abc341_e" }
abc354-e = { alias = "abc354_e", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_e" }
abc359-e = { alias = "abc359_e", problem = "https://atcoder.jp/contests/abc359/tasks/abc359_e" }
abc361-e = { alias = "abc361_e", problem = "https://atcoder.jp/contests/abc361/tasks/abc361_e" }
abc363-e = { alias = "abc363_e", problem = "https://atcoder.jp/contests/abc363/tasks/abc363_e" }
abc347-d = { alias = "abc347_d", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_d" }
abc347-e = { alias = "abc347_e", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_e" }
abc348-d = { alias = "abc348_d", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_d" }
abc352-e = { alias = "abc352_e", problem = "https://atcoder.jp/contests/abc352/tasks/abc352_e" }
abc340-e = { alias = "abc340_e", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_e" }
abc298-e = { alias = "abc298_e", problem = "https://atcoder.jp/contests/abc298/tasks/abc298_e" }
abc339-e = { alias = "abc339_e", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_e" }
abc337-e = { alias = "abc337_e", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_e" }
abc334-e = { alias = "abc334_e", problem = "https://atcoder.jp/contests/abc334/tasks/abc334_e" }
abc305-e = { alias = "abc305_e", problem = "https://atcoder.jp/contests/abc305/tasks/abc305_e" }
abc303-e = { alias = "abc303_e", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_e" }
abc242-e = { alias = "abc242_e", problem = "https://atcoder.jp/contests/abc242/tasks/abc242_e" }
abc348-e = { alias = "abc348_e", problem = "https://atcoder.jp/contests/abc348/tasks/abc348_e" }
abc357-e = { alias = "abc357_e", problem = "https://atcoder.jp/contests/abc357/tasks/abc357_e" }
abc308-f = { alias = "abc308_f", problem = "https://atcoder.jp/contests/abc308/tasks/abc308_f" }
abc351-f = { alias = "abc351_f", problem = "https://atcoder.jp/contests/abc351/tasks/abc351_f" }
abc370-e = { alias = "abc370_e", problem = "https://atcoder.jp/contests/abc370/tasks/abc370_e" }
abc367-d = { alias = "abc367_d", problem = "https://atcoder.jp/contests/abc367/tasks/abc367_d" }
abc368-d = { alias = "abc368_d", problem = "https://atcoder.jp/contests/abc368/tasks/abc368_d" }
abc368-e = { alias = "abc368_e", problem = "https://atcoder.jp/contests/abc368/tasks/abc368_e" }
abc367-e = { alias = "abc367_e", problem = "https://atcoder.jp/contests/abc367/tasks/abc367_e" }
abc369-d = { alias = "abc369_d", problem = "https://atcoder.jp/contests/abc369/tasks/abc369_d" }
abc369-e = { alias = "abc369_e", problem = "https://atcoder.jp/contests/abc369/tasks/abc369_e" }
abc369-f = { alias = "abc369_f", problem = "https://atcoder.jp/contests/abc369/tasks/abc369_f" }
abc371-e = { alias = "abc371_e", problem = "https://atcoder.jp/contests/abc371/tasks/abc371_e" }
abc372-d = { alias = "abc372_d", problem = "https://atcoder.jp/contests/abc372/tasks/abc372_d" }
abc373-d = { alias = "abc373_d", problem = "https://atcoder.jp/contests/abc373/tasks/abc373_d" }
abc289-e = { alias = "abc289_e", problem = "https://atcoder.jp/contests/abc289/tasks/abc289_e" }
abc281-e = { alias = "abc281_e", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_e" }
abc279-e = { alias = "abc279_e", problem = "https://atcoder.jp/contests/abc279/tasks/abc279_e" }
abc375-e = { alias = "abc375_e", problem = "https://atcoder.jp/contests/abc375/tasks/abc375_e" }
abc374-e = { alias = "abc374_e", problem = "https://atcoder.jp/contests/abc374/tasks/abc374_e" }
abc293-d = { alias = "abc293_d", problem = "https://atcoder.jp/contests/abc293/tasks/abc293_d" }
abc406-c = { alias = "abc406_c", problem = "https://atcoder.jp/contests/abc406/tasks/abc406_c" }
abc317-d = { alias = "abc317_d", problem = "https://atcoder.jp/contests/abc317/tasks/abc317_d" }
abc344-e = { alias = "abc344_e", problem = "https://atcoder.jp/contests/abc344/tasks/abc344_e" }
abc363-d = { alias = "abc363_d", problem = "https://atcoder.jp/contests/abc363/tasks/abc363_d" }
abc370-d = { alias = "abc370_d", problem = "https://atcoder.jp/contests/abc370/tasks/abc370_d" }
abc286-e = { alias = "abc286_e", problem = "https://atcoder.jp/contests/abc286/tasks/abc286_e" }
abc282-d = { alias = "abc282_d", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_d" }
abc336-d = { alias = "abc336_d", problem = "https://atcoder.jp/contests/abc336/tasks/abc336_d" }
abc133-d = { alias = "abc133_d", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_d" }
abc290-d = { alias = "abc290_d", problem = "https://atcoder.jp/contests/abc290/tasks/abc290_d" }
abc320-e = { alias = "abc320_e", problem = "https://atcoder.jp/contests/abc320/tasks/abc320_e" }
abc324-e = { alias = "abc324_e", problem = "https://atcoder.jp/contests/abc324/tasks/abc324_e"}
abc165-c = { alias = "abc165_c", problem = "https://atcoder.jp/contests/abc165/tasks/abc165_c"}
abc414-e = { alias = "abc414_e", problem = "https://atcoder.jp/contests/abc414/tasks/abc414_e"}
abc321-d = { alias = "abc321_d", problem = "https://atcoder.jp/contests/abc321/tasks/abc321_d"}
abc406-e = { alias = "abc406_e", problem = "https://atcoder.jp/contests/abc406/tasks/abc406_e"}
abc416-e = { alias = "abc416_e", problem = "https://atcoder.jp/contests/abc416/tasks/abc416_e"}

[[bin]]
name = "abc212-d"
path = "src/bin/abc212_d.rs"

[[bin]]
name = "abc213-d"
path = "src/bin/abc213_d.rs"

[[bin]]
name = "abc214-d"
path = "src/bin/abc214_d.rs"

[[bin]]
name = "abc215-d"
path = "src/bin/abc215_d.rs"

[[bin]]
name = "abc216-d"
path = "src/bin/abc216_d.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/abc217_d.rs"

[[bin]]
name = "abc218-d"
path = "src/bin/abc218_d.rs"

[[bin]]
name = "abc219-d"
path = "src/bin/abc219_d.rs"

[[bin]]
name = "abc220-d"
path = "src/bin/abc220_d.rs"

[[bin]]
name = "abc221-d"
path = "src/bin/abc221_d.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/abc222_d.rs"

[[bin]]
name = "abc223-d"
path = "src/bin/abc223_d.rs"

[[bin]]
name = "abc224-d"
path = "src/bin/abc224_d.rs"

[[bin]]
name = "abc225-d"
path = "src/bin/abc225_d.rs"

[[bin]]
name = "abc226-d"
path = "src/bin/abc226_d.rs"

[[bin]]
name = "abc227-d"
path = "src/bin/abc227_d.rs"

[[bin]]
name = "abc228-d"
path = "src/bin/abc228_d.rs"

[[bin]]
name = "abc229-d"
path = "src/bin/abc229_d.rs"

[[bin]]
name = "abc230-d"
path = "src/bin/abc230_d.rs"

[[bin]]
name = "abc231-d"
path = "src/bin/abc231_d.rs"

[[bin]]
name = "abc232-d"
path = "src/bin/abc232_d.rs"

[[bin]]
name = "abc233-d"
path = "src/bin/abc233_d.rs"

[[bin]]
name = "abc234-d"
path = "src/bin/abc234_d.rs"

[[bin]]
name = "abc235-d"
path = "src/bin/abc235_d.rs"

[[bin]]
name = "abc236-d"
path = "src/bin/abc236_d.rs"

[[bin]]
name = "abc237-d"
path = "src/bin/abc237_d.rs"

[[bin]]
name = "abc238-d"
path = "src/bin/abc238_d.rs"

[[bin]]
name = "abc239-d"
path = "src/bin/abc239_d.rs"

[[bin]]
name = "abc240-d"
path = "src/bin/abc240_d.rs"

[[bin]]
name = "abc241-d"
path = "src/bin/abc241_d.rs"

[[bin]]
name = "abc242-d"
path = "src/bin/abc242_d.rs"

[[bin]]
name = "abc243-d"
path = "src/bin/abc243_d.rs"

[[bin]]
name = "abc244-d"
path = "src/bin/abc244_d.rs"

[[bin]]
name = "abc245-d"
path = "src/bin/abc245_d.rs"

[[bin]]
name = "abc246-d"
path = "src/bin/abc246_d.rs"

[[bin]]
name = "abc247-d"
path = "src/bin/abc247_d.rs"

[[bin]]
name = "abc257-d"
path = "src/bin/abc257_d.rs"

[[bin]]
name = "abc262-d"
path = "src/bin/abc262_d.rs"

[[bin]]
name = "abc268-d"
path = "src/bin/abc268_d.rs"

[[bin]]
name = "abc270-d"
path = "src/bin/abc270_d.rs"

[[bin]]
name = "abc310-d"
path = "src/bin/abc310_d.rs"

[[bin]]
name = "abc332-d"
path = "src/bin/abc332_d.rs"

[[bin]]
name = "abc338-d"
path = "src/bin/abc338_d.rs"

[[bin]]
name = "abc339-d"
path = "src/bin/abc339_d.rs"

[[bin]]
name = "abc359-d"
path = "src/bin/abc359_d.rs"

[[bin]]
name = "abc361-d"
path = "src/bin/abc361_d.rs"

[[bin]]
name = "abc226-e"
path = "src/bin/abc226_e.rs"

[[bin]]
name = "abc235-e"
path = "src/bin/abc235_e.rs"

[[bin]]
name = "abc237-e"
path = "src/bin/abc237_e.rs"

[[bin]]
name = "abc247-e"
path = "src/bin/abc247_e.rs"

[[bin]]
name = "abc254-e"
path = "src/bin/abc254_e.rs"

[[bin]]
name = "abc256-e"
path = "src/bin/abc256_e.rs"

[[bin]]
name = "abc248-e"
path = "src/bin/abc248_e.rs"

[[bin]]
name = "abc252-e"
path = "src/bin/abc252_e.rs"

[[bin]]
name = "abc264-e"
path = "src/bin/abc264_e.rs"

[[bin]]
name = "abc266-e"
path = "src/bin/abc266_e.rs"

[[bin]]
name = "abc270-e"
path = "src/bin/abc270_e.rs"

[[bin]]
name = "abc275-e"
path = "src/bin/abc275_e.rs"

[[bin]]
name = "abc280-e"
path = "src/bin/abc280_e.rs"

[[bin]]
name = "abc292-e"
path = "src/bin/abc292_e.rs"

[[bin]]
name = "abc296-e"
path = "src/bin/abc296_e.rs"

[[bin]]
name = "abc306-e"
path = "src/bin/abc306_e.rs"

[[bin]]
name = "abc353-e"
path = "src/bin/abc353_e.rs"

[[bin]]
name = "abc307-e"
path = "src/bin/abc307_e.rs"

[[bin]]
name = "abc232-e"
path = "src/bin/abc232_e.rs"

[[bin]]
name = "abc310-e"
path = "src/bin/abc310_e.rs"

[[bin]]
name = "abc327-e"
path = "src/bin/abc327_e.rs"

[[bin]]
name = "abc338-e"
path = "src/bin/abc338_e.rs"

[[bin]]
name = "abc341-e"
path = "src/bin/abc341_e.rs"

[[bin]]
name = "abc354-e"
path = "src/bin/abc354_e.rs"

[[bin]]
name = "abc359-e"
path = "src/bin/abc359_e.rs"

[[bin]]
name = "abc361-e"
path = "src/bin/abc361_e.rs"

[[bin]]
name = "abc363-e"
path = "src/bin/abc363_e.rs"

[[bin]]
name = "abc347-d"
path = "src/bin/abc347_d.rs"

[[bin]]
name = "abc347-e"
path = "src/bin/abc347_e.rs"

[[bin]]
name = "abc348-d"
path = "src/bin/abc348_d.rs"

[[bin]]
name = "abc352-e"
path = "src/bin/abc352_e.rs"

[[bin]]
name = "abc340-e"
path = "src/bin/abc340_e.rs"

[[bin]]
name = "abc298-e"
path = "src/bin/abc298_e.rs"

[[bin]]
name = "abc339-e"
path = "src/bin/abc339_e.rs"

[[bin]]
name = "abc337-e"
path = "src/bin/abc337_e.rs"

[[bin]]
name = "abc334-e"
path = "src/bin/abc334_e.rs"

[[bin]]
name = "abc305-e"
path = "src/bin/abc305_e.rs"

[[bin]]
name = "abc303-e"
path = "src/bin/abc303_e.rs"

[[bin]]
name = "abc242-e"
path = "src/bin/abc242_e.rs"

[[bin]]
name = "abc348-e"
path = "src/bin/abc348_e.rs"

[[bin]]
name = "abc357-e"
path = "src/bin/abc357_e.rs"

[[bin]]
name = "abc308-f"
path = "src/bin/abc308_f.rs"

[[bin]]
name = "abc351-f"
path = "src/bin/abc351_f.rs"

[[bin]]
name = "abc370-e"
path = "src/bin/abc370_e.rs"

[[bin]]
name = "abc367-d"
path = "src/bin/abc367_d.rs"

[[bin]]
name = "abc368-d"
path = "src/bin/abc368_d.rs"

[[bin]]
name = "abc368-e"
path = "src/bin/abc368_e.rs"

[[bin]]
name = "abc367-e"
path = "src/bin/abc367_e.rs"

[[bin]]
name = "abc369-d"
path = "src/bin/abc369_d.rs"

[[bin]]
name = "abc369-e"
path = "src/bin/abc369_e.rs"

[[bin]]
name = "abc369-f"
path = "src/bin/abc369_f.rs"

[[bin]]
name = "abc371-e"
path = "src/bin/abc371_e.rs"

[[bin]]
name = "abc372-d"
path = "src/bin/abc372_d.rs"

[[bin]]
name = "abc373-d"
path = "src/bin/abc373_d.rs"

[[bin]]
name = "abc289-e"
path = "src/bin/abc289_e.rs"

[[bin]]
name = "abc281-e"
path = "src/bin/abc281_e.rs"

[[bin]]
name = "abc279-e"
path = "src/bin/abc279_e.rs"

[[bin]]
name = "abc375-e"
path = "src/bin/abc375_e.rs"

[[bin]]
name = "abc374-e"
path = "src/bin/abc374_e.rs"

[[bin]]
name = "abc293-d"
path = "src/bin/abc293_d.rs"

[[bin]]
name = "abc406-c"
path = "src/bin/abc406_c.rs"

[[bin]]
name = "abc317-d"
path = "src/bin/abc317_d.rs"

[[bin]]
name = "abc344-e"
path = "src/bin/abc344_e.rs"

[[bin]]
name = "abc363-d"
path = "src/bin/abc363_d.rs"

[[bin]]
name = "abc370-d"
path = "src/bin/abc370_d.rs"

[[bin]]
name = "abc286-e"
path = "src/bin/abc286_e.rs"

[[bin]]
name = "abc282-d"
path = "src/bin/abc282_d.rs"

[[bin]]
name = "abc336-d"
path = "src/bin/abc336_d.rs"

[[bin]]
name = "abc133-d"
path = "src/bin/abc133_d.rs"

[[bin]]
name = "abc290-d"
path = "src/bin/abc290_d.rs"

[[bin]]
name = "abc320-e"
path = "src/bin/abc320_e.rs"

[[bin]]
name = "abc324-e"
path = "src/bin/abc324_e.rs"

[[bin]]
name = "abc165-c"
path = "src/bin/abc165_c.rs"

[[bin]]
name = "abc414-e"
path = "src/bin/abc414_e.rs"

[[bin]]
name = "abc321-d"
path = "src/bin/abc321_d.rs"

[[bin]]
name = "abc406-e"
path = "src/bin/abc406_e.rs"

[[bin]]
name = "abc416-e"
path = "src/bin/abc416_e.rs"

[dependencies]
rpds = "=1.1.1"
rand_xorshift = "=0.4.0"
rand_xoshiro = "=0.7.0"
statrs = "=0.18.0"
primal = "=0.3.3"
thiserror = "=2.0.16"
ac-library-rs = "=0.2.0"
once_cell = "=1.21.3"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.7.0"
hashbag = "=0.1.12"
pathfinding = "=4.14.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=4.9.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "=4.0.1"
amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
multimap = "=0.10.1"
btreemultimap = "=0.1.1"
bstr = "=1.12.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.8.0"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-complex = "=0.4.6"
num-integer = "=0.1.46"
num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
ndarray = "=0.16.1"
nalgebra = "=0.34.0"
alga = "=0.9.3"
libm = "=0.2.15"
rand = "=0.9.2"
getrandom = "=0.3.3"
rand_chacha = "=0.9.0"
rand_core = "=0.9.3"
rand_hc = "=0.4.0"
rand_pcg = "=0.9.0"
rand_distr = "=0.5.1"
petgraph = "=0.8.2"
indexmap = "=2.11.0"
regex = "=1.11.2"
lazy_static = "=1.5.0"
ordered-float = "=5.0.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.14.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.15.0"
im-rc = "=15.1.0"
fixedbitset = "=0.5.7"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.5.0", features = ["derive"] }
text_io = "=0.1.13"
rustc-hash = "=2.1.1"
smallvec = { version = "=1.15.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }

[dev-dependencies]
