[package]
name = "yukicoder"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
2919_yukicoder = { alias = "2919", problem = "https://yukicoder.me/problems/no/2919" }
2920_yukicoder = { alias = "2920", problem = "https://yukicoder.me/problems/no/2920" }
2921_yukicoder = { alias = "2921", problem = "https://yukicoder.me/problems/no/2921" }
2922_yukicoder = { alias = "2922", problem = "https://yukicoder.me/problems/no/2922" }
2923_yukicoder = { alias = "2923", problem = "https://yukicoder.me/problems/no/2923" }
2927_yukicoder = { alias = "2927", problem = "https://yukicoder.me/problems/no/2927" }
2930_yukicoder = { alias = "2930", problem = "https://yukicoder.me/problems/no/2930" }
3010_yukicoder = { alias = "3010", problem = "https://yukicoder.me/problems/no/3010" }
3011_yukicoder = { alias = "3011", problem = "https://yukicoder.me/problems/no/3011" }
3012_yukicoder = { alias = "3012", problem = "https://yukicoder.me/problems/no/3012" }
3013_yukicoder = { alias = "3013", problem = "https://yukicoder.me/problems/no/3013" }
3014_yukicoder = { alias = "3014", problem = "https://yukicoder.me/problems/no/3014" }
3015_yukicoder = { alias = "3015", problem = "https://yukicoder.me/problems/no/3015" }
3016_yukicoder = { alias = "3016", problem = "https://yukicoder.me/problems/no/3016" }
3017_yukicoder = { alias = "3017", problem = "https://yukicoder.me/problems/no/3017" }
3018_yukicoder = { alias = "3018", problem = "https://yukicoder.me/problems/no/3018" }
3259_yukicoder = { alias = "3259", problem = "https://yukicoder.me/problems/no/3259"}
3260_yukicoder = { alias = "3260", problem = "https://yukicoder.me/problems/no/3260"}
3261_yukicoder = { alias = "3261", problem = "https://yukicoder.me/problems/no/3261"}
3262_yukicoder = { alias = "3262", problem = "https://yukicoder.me/problems/no/3262"}
3263_yukicoder = { alias = "3263", problem = "https://yukicoder.me/problems/no/3263"}
3264_yukicoder = { alias = "3264", problem = "https://yukicoder.me/problems/no/3264"}
3265_yukicoder = { alias = "3265", problem = "https://yukicoder.me/problems/no/3265"}
3266_yukicoder = { alias = "3266", problem = "https://yukicoder.me/problems/no/3266"}

[[bin]]
name = "2919_yukicoder"
path = "src/bin/2919.rs"

[[bin]]
name = "2920_yukicoder"
path = "src/bin/2920.rs"

[[bin]]
name = "2921_yukicoder"
path = "src/bin/2921.rs"

[[bin]]
name = "2922_yukicoder"
path = "src/bin/2922.rs"

[[bin]]
name = "2923_yukicoder"
path = "src/bin/2923.rs"

[[bin]]
name = "2927_yukicoder"
path = "src/bin/2927.rs"

[[bin]]
name = "2930_yukicoder"
path = "src/bin/2930.rs"

[[bin]]
name = "3010_yukicoder"
path = "src/bin/3010.rs"

[[bin]]
name = "3011_yukicoder"
path = "src/bin/3011.rs"

[[bin]]
name = "3012_yukicoder"
path = "src/bin/3012.rs"

[[bin]]
name = "3013_yukicoder"
path = "src/bin/3013.rs"

[[bin]]
name = "3014_yukicoder"
path = "src/bin/3014.rs"

[[bin]]
name = "3015_yukicoder"
path = "src/bin/3015.rs"

[[bin]]
name = "3016_yukicoder"
path = "src/bin/3016.rs"

[[bin]]
name = "3017_yukicoder"
path = "src/bin/3017.rs"

[[bin]]
name = "3018_yukicoder"
path = "src/bin/3018.rs"

[[bin]]
name = "3259_yukicoder"
path = "src/bin/3259.rs"

[[bin]]
name = "3260_yukicoder"
path = "src/bin/3260.rs"

[[bin]]
name = "3261_yukicoder"
path = "src/bin/3261.rs"

[[bin]]
name = "3262_yukicoder"
path = "src/bin/3262.rs"

[[bin]]
name = "3263_yukicoder"
path = "src/bin/3263.rs"

[[bin]]
name = "3264_yukicoder"
path = "src/bin/3264.rs"

[[bin]]
name = "3265_yukicoder"
path = "src/bin/3265.rs"

[[bin]]
name = "3266_yukicoder"
path = "src/bin/3266.rs"

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = "=0.4.1"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
